<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_40"
    android:background="@color/white_gray"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:gravity="center"
        android:text="@string/week_rank"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        android:text="@string/stock"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/total_increase"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_16"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:gravity="center"
        android:text="@string/week_integral"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_16"/>
</LinearLayout>
