<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_4"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/verify_tip"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_16"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_6"
        android:background="@color/red"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/verify_tip_cntent"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_14"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_6"
        android:background="@color/linen"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/cancel"
            android:textColor="@color/black_33"
            android:textSize="@dimen/sp_16"/>
        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/linen"/>
        <Button
            android:id="@+id/callBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/call"
            android:textColor="@color/black_33"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>
</LinearLayout>