<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.zbmf.StockGroup.activity.StockArgumentActivity">

    <include layout="@layout/title_layout"/>

    <TextView
        android:id="@+id/submitPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_3"
        tools:text="提交周期:2018-06-01~2018-06-05"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_16"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/submitObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginStart="@dimen/dp_16"
        android:padding="@dimen/dp_3"
        android:text="@string/t_4"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_16"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:id="@+id/tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginStart="@dimen/dp_16"
        android:padding="@dimen/dp_3"
        android:text="@string/selectStockTip"
        android:textColor="@color/red"
        android:textSize="@dimen/sp_16"
        tools:ignore="RtlHardcoded"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_10"
        android:padding="@dimen/dp_3"
        android:text="@string/submit_stock_1"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_16"
        tools:ignore="RtlHardcoded"/>

    <AutoCompleteTextView
        android:id="@+id/et_stock"
        android:gravity="start|top"
        android:padding="@dimen/dp_5"
        android:inputType="number"
        android:textSize="@dimen/sp_15"
        android:hint="请输入选股代码..."
        android:textColorHint="@color/mfb_b7b7b7"
        android:paddingTop="@dimen/dp_15"
        android:paddingStart="@dimen/dp_15"
        android:textColor="@color/black_33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/et_bg"
        android:minHeight="@dimen/dp_45"
        android:minLines="3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|left"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_20"
        android:padding="@dimen/dp_3"
        android:text="@string/select_stock_argument"
        android:textColor="@color/black_33"
        android:textSize="@dimen/sp_15"
        tools:ignore="RtlHardcoded"/>

    <EditText
        android:gravity="start|top"
        android:padding="@dimen/dp_5"
        android:textSize="@dimen/sp_15"
        android:textColor="@color/black_33"
        android:id="@+id/et_stock_argument"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:background="@drawable/et_bg"
        android:minHeight="@dimen/dp_85"
        android:minLines="4"/>

    <Button
        android:id="@+id/submitStockBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/submit_stock_btn"
        android:text="@string/submit_stock"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"/>
</LinearLayout>
