<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/group_layout_background"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />



    <com.zbmf.StockGroup.view.PullToRefreshScrollView xmlns:ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/myscrllview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        ptr:ptrAnimationStyle="flip"
        ptr:ptrMode="both">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="15dp">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/all_money"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black_33"
                                android:text="100000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/all_money1"
                                android:textColor="@color/main_activity_layout_text_color" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/all_shouyi"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="13.56%" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/all_sy"
                                android:textColor="@color/main_activity_layout_text_color" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/arrow_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black_33"
                                android:text="1245" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/paiming"
                                android:textColor="@color/main_activity_layout_text_color" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:background="@color/main_activity_layout"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp">
                    <TextView
                        android:id="@+id/match_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/record_count"
                        android:textColor="@color/main_activity_layout_text_color" />
                </RelativeLayout>

                <com.zbmf.StockGroup.view.ListViewForScrollView
                    android:id="@+id/content_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:divider="@color/transparent"
                    android:dividerHeight="1dp" />

                <TextView
                    android:id="@+id/tv_tip"
                    android:layout_width="match_parent"
                    android:layout_height="45dp" android:paddingLeft="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/record_tip1"
                    android:textAppearance="@style/TextAppear.Theme.cb_Size14" />

            </LinearLayout>
        </com.zbmf.StockGroup.view.PullToRefreshScrollView>
</LinearLayout>